[#741] Fix vertical alignment

--- a/webui/src/app/dashboard/dashboard.component.sass
+++ b/webui/src/app/dashboard/dashboard.component.sass
@@ -1,10 +1,9 @@
 .action-button
-   margin: 4px 4px 4px 0
-   width: 100%
+  margin: 4px 4px 4px 0
+  width: 100%
 
 .alerts
   width: 200px
-
 
 // style DHCP services table
 .dhcp-services-table
@@ -20,7 +19,6 @@
 .dhcp-services-table tr:nth-child(2n)
   background-color: #f4f4f4
 
-
 h1.section-heading
   font-size: 1.4em
   border-bottom: 3px solid #e1e1e1
@@ -28,3 +26,6 @@ h1.section-heading
 h2.section-heading
   font-size: 1.2em
   margin: 5px 0 3px 0
+
+.utilization-row__id
+  vertical-align: middle
